istio/techpreview/amazin-istio-prod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: amazin-gateway-prod
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "amazin-prd-istio-system.apps.ocp.datr.eu"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: inventory
spec:
  host: inventory.amazin-prod.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory
spec:
  hosts:
  - "amazin-prd-istio-system.apps.ocp.datr.eu"
  gateways:
  - amazin-gateway-prod
  http:
  - match:
    - uri:
        prefix: /products
    route:
    - destination:
        host: inventory.amazin-prod.svc.cluster.local
        port:
          number: 8080
        subset: v1
      weight: 100
    - destination:
        host: inventory.amazin-prod.svc.cluster.local
        port:
          number: 8080
        subset: v2
      weight: 0
    - destination:
        host: inventory.amazin-prod.svc.cluster.local
        port:
          number: 8080
        subset: v3
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  hosts:
  - "amazin-prd-istio-system.apps.ocp.datr.eu"
  gateways:
  - amazin-gateway-prod
  http:
  - match:
    - uri:
        prefix: /user
    route:
    - destination:
        host: user.amazin-prod.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: basket
spec:
  hosts:
  - "amazin-prd-istio-system.apps.ocp.datr.eu"
  gateways:
  - amazin-gateway-prod
  http:
  - match:
    - uri:
        prefix: /basket
    route:
    - destination:
        host: basket.amazin-prod.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway
spec:
  hosts:
  - "amazin-prd-istio-system.apps.ocp.datr.eu"
  gateways:
  - amazin-gateway-prod
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: api-gateway.amazin-prod.svc.cluster.local
        port:
          number: 8080
