istio/techpreview/amazin-prd-vs-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory
spec:
  hosts:
  - inventory
  http:
  - route:
    - destination:
        host: inventory
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  hosts:
  - user
  http:
  - route:
    - destination:
        host: user
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: basket
spec:
  hosts:
  - basket
  http:
  - route:
    - destination:
        host: basket
        subset: v1
---
